--- a/HW1.tex
+++ b/HW1.tex
@@ -127,16 +127,35 @@
     S$.
   \end{prob}
   
+  \begin{sol}
+   \begin{align}
+   Assume: {(x,y),(y,z)} \in R \cap S \\
+     \Rightarrow (x,y) \cap (y,z) \in R,S \\
+     \Rightarrow (x,z) \in R,S \\
+     \Rightarrow (x,z) \in R \cap S
+   \end{align}
+  \end{sol}
   
   \begin{prob}
     Show (or give a counterexample) that if $R$ and $S$ are equivalence relations, then so is
     $R \cup S$.
   \end{prob}
   
+  \begin{sol}
+  \begin{align}
+    Fix: R &= \big\{(x,x),(x,y),(y,y)\big\} \\
+    S &= \big\{(x,x),(y,x),(y,y)\big\} \\
+      R \cup S  &= \big\{(x,x),(y,y)\big\}
+  \end{align}
+  This case is not transitive, therefore $R \cup $S is not transitive
+  \end{sol}
+  
   
   \section*{$FO(\mathbb Z)$}
   
   Section 1.13.1 exercises 1--3.
+  
+  
   
   
   \end{document}
