--- a/HW2.tex
+++ b/HW2.tex
@@ -26,6 +26,8 @@
 \theoremstyle{definition}
 \newtheorem{defn}{Definition}
 \newtheorem{prob}{Problem}
+\newtheorem{ts}{Textbook Solution}
+
 
 \begin{document}
 
@@ -38,6 +40,13 @@
 \section*{$FO(\mathbb Z)$}
 
 Section 1.14.1 exercise 1-2.
+
+\begin{ts}
+ Every two numbers has a common divisor in FO(Z)
+ \begin{equation}
+ 	\forall x. \forall y. \exists w. ( x \textpipe w) \wedge (y \textpipe w)
+ \end{equation}
+\end{ts}
 
 Section 1.14.2 exercise 1.
 
