fixed pipe symbol

--- a/HW2.tex
+++ b/HW2.tex
@@ -44,7 +44,7 @@ Section 1.14.1 exercise 1-2.
 \begin{ts}
  Every two numbers has a common divisor in FO(Z)
  \begin{equation}
- 	\forall x. \forall y. \exists w. ( x \textpipe w) \wedge (y \textpipe w)
+ 	\forall x. \forall y. \exists w. ( x \mid w) \wedge (y \mid w)
  \end{equation}
 \end{ts}
 
