lastw two questions need work

--- a/HW2.tex
+++ b/HW2.tex
@@ -62,7 +62,7 @@ Section 1.14.1 exercise 1-2.
 
 Section 1.14.2 exercise 1.
 
-\begin{sol}
+\begin{ts}
 
 \begin{align*}
 	\llbracket \phi \wedge \phi \rrbracket \sigma &=  \llbracket \phi \rrbracket \sigma \\ \llbracket \phi \rrbracket \sigma \wedge \llbracket \phi \rrbracket \sigma &=  \llbracket \phi \rrbracket \sigma \\
@@ -74,11 +74,11 @@ Section 1.14.2 exercise 1.
 \end{align*}
 Take \textphi to equal any integer x, add x + 0 = 0 by the meaning of adding nothing to something. In this case x. 
 
-\end{sol}
+\end{ts}
 
 Section 1.14.3 exercise 2.
 
-\begin{sol}
+\begin{ts}
 
 \begin{align*}
 \forall w \forall x. \forall y \forall z. w > x \wedge y > z &\Rightarrow w + y > x + z \\ \forall w \forall x. \forall y \forall z. w > x \wedge y > z &\Rightarrow w + y > x + z
@@ -86,10 +86,10 @@ Section 1.14.3 exercise 2.
 
 We can say x + z \textless x + y by left and right monotonicity of addition
 We can say x + z \textless x + y \textless w + y by transitive property of \textless
-\end{sol}
+\end{ts}
 
 Section 1.14.4 exercise 2 ($\star$)
-\begin{sol}
+\begin{ts}
 Use the following properties of addition to prove the following theoroms.
 	\begin{enumerate}
 	\item 0 + y = y  
@@ -109,7 +109,7 @@ Use the following properties of addition to prove the following theoroms.
 	\begin{equation}
 	\forall x. \forall y. x + y = y + x
 	\end{equation}
-\end{sol}
+\end{ts}
 
 
 
@@ -202,7 +202,7 @@ prove  Sa * (y * z) &= (Sa * y) * z \\
 \section*{The \texttt{while} language}
 
 Section 2.10.1 exercises 2-5.
-
+\setcounter{ts}{0}
 
 \begin{bp}
 2.10.1.1: Write a while command that sets $z$ to max of $x$ and $y$
