--- a/HW3.tex
+++ b/HW3.tex
@@ -132,7 +132,7 @@
 
   
 
-  \textbf{Homework 3: Domains and Denotations} \hfill \emph{Due: September 24, 2018, 9:00 AM}
+  \textbf{Homework 3: Domains and Denotations} \hfill \emph{author: Luke Dercher}
 
   
 
@@ -278,6 +278,22 @@
 
   Section 2.11.3 exercises 1 and 2 ($\star$)
 
+  \begin{bp}
+
+	let $(A, \sqsubseteq_A,\bot_A)$ be s.t. \\
+	\indent $A = {0,1,2}$ \\ 
+	$\forall a \in A. 0 \sqsubseteq_A a$ \\
+	$1 \sqsubseteq_A 2$ \\
+	$\forall a \in A. a \sqsubseteq_A a$ \\
+	$\bot_A = 0$ \\ \\
+	
+	let $(B, \sqsubseteq_B,\bot_B)$ be s.t. \\
+	\indent $B = {0,1}$ \\ 
+	$\forall b \in B. 0 \sqsubseteq_B b$ \\
+	$\forall b \in B. b \sqsubseteq_B b$ \\
+	$\bot_B = 0$
+  
+  \end{bp}
   
 
   \begin{ts}
